[tool.poetry]
name = "dispatcher"
version = "0.1.0"
description = "Polls rabbitMQ and takes action"
authors = ["linuxbandit <bellicaf@tcd.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
faker = "^18.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
